2009-05-03  Alexandre Ferrieux <ferrieux@sourceforge.net>
	* generic/threadSpCmd.c: Reorder things in RemoveMutex and
	RemoveCondv [Bugs 2511424,2511408]; fix a Put* leak in an error
	path of rwmutexes [Bug 2511420].
	
2008-12-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/threadSvCmd.c: Handle TIP#336 addition of API to access
	* generic/threadSpCmd.c: interp->errorLine

2008-11-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/threadSvCmd.c (SvObjObjCmd): safely set interp result obj

	* generic/threadCmd.c (ThreadCutChannel): fix const warning
	(ThreadSend): safely set interp result object [Bug #1988779]

2009-10-22 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadPool.c: fixed race condition when
	creating minworkers worker thread upfront.
	Failure to create one results in partial pool teardown.
	Fix for Bug # 2005794.

2008-05-22 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadSpCmd.h: Added one cond variable per
	sync bucket to wait for item deletion.

	* generic/threadSpCmd.c: Threads that want to delete
	any sync primitive now wait properly until the last
	thread that references the primitive detaches.

	Fixed (broken) reference counting of items.

	Fixed wrong release of an condition variable that is
	about to be time-waited.

2008-05-18 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadPoolCmd.c: Corrected potential race condition
	in TpoolWorker().

2007-06-30 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadPoolCmd.c: Fixed signedness compiler warning
	on jobId in TpoolWaitObjCmd().

2007-06-30 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadSvKeylistCmd.c: Fixed off-by-1 error in argument
	parsing for SvKeylkeysObjCmd(). See Tcl Bug #1575342.

	* generic/threadPoolCmd.c: Fixed Tcl Bug #1512225 (tpool::wait and
	tpool::cancel setting wrong values to passed variables)

2007-05-26 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadPoolCmd.c: Fixed [tpool::post -nowait] to start